--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,10 @@ jobs:
       steps:
         - checkout
         - run: apt-get update
-        - run: apt-get install -y git ssh
+        - run: apt-get install -y git ssh libxslt
         - run: git submodule update --init --recursive
         - run: mkdir build
         - run: cd build && cmake -DCMAKE_BUILD_TYPE=Debug ..
         - run: cd build && make
         - run: ln -s build/bin bin
-        - run: cd test/parser && ./runtest.py
+        - run: cd test/parser && make
