--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       steps:
         - checkout
         - run: apt-get update
-        - run: apt-get install -y git ssh libxslt-dev
+        - run: apt-get install -y git ssh xsltproc
         - run: git submodule update --init --recursive
         - run: mkdir build
         - run: cd build && cmake -DCMAKE_BUILD_TYPE=Debug ..
