--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,4 +53,6 @@ if(${BUILD_LANGUAGE_BINDINGS})
     add_subdirectory(bindings)
 endif()
 
+add_subdirectory(python)
+
 add_subdirectory(CMake/post-install)
