--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -17,14 +17,4 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-file(GLOB PARSER_TESTS *.xml)
-
-if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
-
-foreach(FILE ${PARSER_TESTS})
-
-    copyDependentFile(${FILE})
-
-endforeach()
-
-endif()
+add_subdirectory(src)
