--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -17,11 +17,11 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-file(GLOB PARSER_TESTS *.xml)
+file(GLOB PYTHON_WRAPPER *.pyc)
 
 if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
 
-foreach(FILE ${PARSER_TESTS})
+foreach(FILE ${PYTHON_WRAPPER})
 
     copyDependentFile(${FILE})
 
