--- a/test/parser/testsuite/CMakeLists.txt
+++ b/test/parser/testsuite/CMakeLists.txt
@@ -21,9 +21,22 @@ file(GLOB PARSER_TESTS *.xml)
 
 if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
 
+copyDependentFile("Makefile.gen")
+copyDependentFile("suite.txt")
+
 foreach(FILE ${PARSER_TESTS})
 
     copyDependentFile(${FILE})
+
+endforeach()
+
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/xsl)
+
+file(GLOB XSL_TRANS ./xsl/*)
+
+foreach(FILE ${XSL_TRANS})
+
+	file(COPY ${FILE} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/xsl)
 
 endforeach()
 
