--- a/test/parser/CMakeLists.txt
+++ b/test/parser/CMakeLists.txt
@@ -25,11 +25,11 @@ add_custom_target(gentest COMMAND cd testsuite && make -f Makefile.gen)
 add_custom_target(cleantest COMMAND cd testsuite && make -f Makefile.gen clean)
 
 # Collection of targest to manage parser testing, and parser test reports
-add_custom_target(run COMMAND time ./runtest.py)
-add_custom_target(c COMMAND time ./runtest.py C)
-add_custom_target(java COMMAND time ./runtest.py Java)
-add_custom_target(cpp COMMAND time ./runtest.py C++)
-add_custom_target(cs COMMAND time ./runtest.py CS)
+add_custom_target(run COMMAND time ./runtest.py DEPENDS gentest)
+add_custom_target(c COMMAND time ./runtest.py C DEPENDS gentest)
+add_custom_target(java COMMAND time ./runtest.py Java DEPENDS gentest)
+add_custom_target(cpp COMMAND time ./runtest.py C++ DEPENDS gentest)
+add_custom_target(cs COMMAND time ./runtest.py CS DEPENDS gentest)
 add_custom_target(cleanreport COMMAND rm srcMLTestReport*.txt)
 add_custom_target(purge COMMAND ls -t srcMLTestReport*.txt | sed '1d' | xargs rm)
 add_custom_target(report COMMAND ls -t srcMLTestReport*.txt | head -1 | xargs cat)
