Remove res requirement for Windows Build

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -22,8 +22,7 @@ file(GLOB SRCML_HEADERS *.hpp)
 file(GLOB SRCML_SOURCE *.cpp)
 list(REMOVE_ITEM SRCML_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/srcml.cpp)
 if(WIN32)
-    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/res)
-    add_executable(srcml srcml.cpp ${SRCML_HEADERS} ${SRCML_SOURCE} res/srcml_win_resources.rc)
+    add_executable(srcml srcml.cpp ${SRCML_HEADERS} ${SRCML_SOURCE})
     target_link_libraries(srcml  srcml_shared ${SRCML_LIBRARIES})
     if("x${CMAKE_CXX_COMPILER_ID}" STREQUAL "xMSVC")
         set_target_properties(srcml PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
