--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,12 +17,12 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-if(BUILD_UNIT_TESTS)
-    add_subdirectory(libsrcml)
-endif()
-
 if(BUILD_CLIENT_TESTS)
     add_subdirectory(client)
+endif()
+
+if(BUILD_LIBSRCML_TESTS)
+    add_subdirectory(libsrcml)
 endif()
 
 if(BUILD_PARSER_TESTS)
