Move contents of Cmake/doc.cmake to a new doc/CMakeLists.txt Change cmake option from GENERATE_DOCUMENTATION to BUILD_DOCUMENTATION

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,10 @@ if(${BUILD_LANGUAGE_BINDINGS})
     add_subdirectory(bindings)
 endif()
 
+if(${BUILD_DOCUMENTATION})
+    add_subdirectory(doc)
+endif()
+
 add_subdirectory(python)
 
 add_subdirectory(CMake/post-install)
