--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -45,10 +45,10 @@ set(ARCHIVE_FLAG_SHORT "r")
 set(ARCHIVE_FLAG_LONG "archive")
 set(OUTPUT_XML_FLAG_LONG "output-xml")
 set(OUTPUT_XML_FLAG_SHORT "X")
-set(OUTPUT_XML_FLAG_LONG "output-xml-fragment")
-set(OUTPUT_XML_FLAG_SHORT "F")
-set(OUTPUT_XML_FLAG_LONG "output-xml-raw")
-set(OUTPUT_XML_FLAG_SHORT "R")
+set(OUTPUT_XML_FRAGMENT_FLAG_LONG "output-xml-fragment")
+set(OUTPUT_XML_FRAGMENT_FLAG_SHORT "F")
+set(OUTPUT_XML_RAW_FLAG_LONG "output-xml-raw")
+set(OUTPUT_XML_RAW_FLAG_SHORT "R")
 set(POSITION_FLAG_LONG "position")
 set(TABS_FLAG "tabs")
 set(CPP_FLAG_LONG "cpp")
@@ -62,6 +62,8 @@ set(LIST_FLAG_LONG "list")
 set(LIST_FLAG_SHORT "L")
 set(INFO_FLAG_LONG "info")
 set(INFO_FLAG_SHORT "i")
+set(FULL_INFO_FLAG_LONG "full-info")
+set(FULL_INFO_FLAG_SHORT "I")
 set(SHOW_LANGUAGE_FLAG_LONG "show-language")
 set(SHOW_URL_FLAG_LONG "show-url")
 set(SHOW_FILENAME_FLAG_LONG "show-filename")
@@ -112,7 +114,6 @@ set(SRCML_CPP_NS_URI "http://www.srcML.org//srcML//cpp")
 set(SRCML_EXT_POSITION_NS_URI "http://www.srcML.org//srcML//position")
 set(LITERAL_FLAG "idk")
 set(MAX_THREADS_FLAG_LONG "max-threads")
-set(IN_ORDER_FLAG_LONG "in-order")
 set(EXTERNAL_LONG "external")
 set(XML_PROCESSING_FLAG_LONG "xml-processing")
 set(APPLY_ROOT_FLAG_LONG "apply-root")
