--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -52,14 +52,12 @@ signal SIGUSR1 can be used to toggle this option.
 : Display most metadata, except the unit count (file count) in a srcML
 archive, then exit.
 
-`--${LONG_INFO_FLAG_LONG}`
+`-${FULL_INFO_FLAG_SHORT}`, `--${FULL_INFO_FLAG_LONG}`
 : Display most metadata including the unit (file) count in a srcML archive,
 then exit.
 
-`--${MAX_THREADS_FLAG_LONG}=<num>`
-: Sets the maximum number of threads `srcml` can spawn.
-
-
+`-${JOBS_FLAG_SHORT}`, `--${JOBS_FLAG_LONG}=<num>`
+: Allow up to NUM threads for source parsing. Typically depends on number of cores.
 
 ## CREATING SRCML
 
@@ -98,6 +96,11 @@ in the srcML file. Possible encodings, such as "UTF-16", "ISO-10646-UCS-2",
 or "ISO-8859-1" can be obtained by using the command
 `iconv -l` on UNIX platforms.
 
+`-${TEXT_FLAG_SHORT}`, `--${TEXT_FLAG_LONG}=<text>`
+: Processes the raw <text> string as input, respecting the escaped newline
+charater. Useful for short text inputs. Equivalent to `echo <text> | srcml`
+with the relevant language specification.
+
 `--${FILES_FROM_LONG}=<file>`
 : Treats the input file as a list of source files.
 Each file is separately translated and collectively stored into a
@@ -107,27 +110,27 @@ begin with the character '\#' are ignored. As with input and output
 files, using the character '-' in place of a file name takes the input
 list from standard input.
 
-`-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
-: Write to output srcML file, URI, or source code file.
-By default, it writes to standard output.
-
-`-${OUTPUT_XML_FLAG_SHORT}`,`--${OUTPUT_XML_FLAG_LONG}`
-: Outputs XML in srcML format. This is the default when the input is source
-code or files containing source code.
-
 `-${ARCHIVE_FLAG_SHORT}`, `--${ARCHIVE_FLAG_LONG}`
 : Creates a srcML archive, which can contain multiple files in the srcML
 format. Default with when provided more than one file or a directory as
 input.
 
-`--${IN_ORDER_FLAG_LONG}`
-: Enables strict output ordering. Useful for comparison when the output
-is an archive of multiple srcML documents.
+`-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
+: Write to output srcML file, URI, or source code file.
+By default, it writes to standard output.
 
-`-${TEXT_FLAG_SHORT}`, `--${TEXT_FLAG_LONG}=<text>`
-: Processes the raw <text> string as input, respecting the escaped newline
-charater. Useful for short text inputs. Equivalent to `echo <text> | srcml`
-with the relevant language specification.
+`-${OUTPUT_XML_FLAG_SHORT}`,`--${OUTPUT_XML_FLAG_LONG}`
+: Outputs XML in the srcML format. This is complete and valid XML. 
+This is the default when the input is source
+code or files containing source code.
+
+`-${OUTPUT_XML_FRAGMENT_FLAG_SHORT}`,`--${OUTPUT_XML_FRAGMENT_FLAG_LONG}`
+: Outputs XML in the srcML format as an archive fragment. This does not include
+the namespaces declared on the archive root element, so is technically not valid XML.
+
+`-${OUTPUT_XML_RAW_FLAG_SHORT}`,`--${OUTPUT_XML_RAW_FLAG_LONG}`
+: Outputs the XML contained in an srcML unit. This is not valid XML as it contains no
+namespace declarations and does not necessarily have a single root element.
 
 
 ### MARKUP OPTIONS
@@ -181,10 +184,6 @@ on the root element.
 `--${NO_XML_DECL_LONG}`
 : No output of the default XML declaration. Useful when the output is
 to be placed inside another XML document.
-
-`--${NO_NAMESPACE_DECL_LONG}`
-: No output of namespace declarations. Useful when the output is to be
-placed inside another XML document.
 
 The following options can be used to change the prefixes.
 Each extensions to the srcML markup has its own namespace. These are
@@ -354,28 +353,7 @@ srcml archive.xml --xpath "//src:unit/@filename"
 : Execute the XPath query on archive.xml, outputting the filename attribute
 of each unit in the archive to standard out.
 
-
-
-## SIGNAL PROCESSING
-
-The following signals may be used to control srcml:
-
-SIGUSR1
-: Toggles verbose option. Useful with multiple input files.
-
-SIGINT
-: Completes current file translation (and output) with multiple input
-files. The input file currently being translated is allowed to
-complete, the complex document is closed, and then the program
-stops. More than one SIGINT causes default behavior.
-
-	This special SIGINT handling only occurs with multiple input files
-in srcML archives.
-
-
-
 ## RETURN STATUS
-
 
 * ${STATUS_SUCCESS}: Normal
 * ${STATUS_ERROR}: Error
@@ -401,14 +379,13 @@ Line endings are normalized in XML formats including srcML.
 
 ## BUGS
 
-Java language mode does may not contain every Java language element.
-
 Libxml2 directly supports many encodings beyond UTF-8, UTF-16, and
 ISO-8859-1 through iconv. However, the BOM (Byte Order Mark) immediately
 before the XML declaration may not be processed correctly by `srcml`
 and by other libxml2-based tools (e.g., xmllint). Use the LE or BE
 version of the encoding, e.g., UTF-32BE, UTF-32LE, instead.
 
+# @todo Where do we report bugs?
 Report bugs to collard@uakron.edu
 
 
@@ -428,7 +405,7 @@ and Heather Michaud.
 
 ## COPYRIGHT
 
-Copyright (C) 2013-2015 srcML, LLC. (www.srcML.org)
+Copyright (C) 2013-2018 srcML, LLC. (www.srcML.org)
 
 The srcML Toolkit is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
