Improve man page

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -3,7 +3,7 @@ srcML format conversion, query, and manipulation
 
 ## SYNOPSIS
 
-`srcml` \[[srcML-options\]][CREATING SRCML] \[[transformations\]][TRANSFORMATIONS] \[[output-src-options\]][EXTRACTING SOURCE CODE] \[[general-options\]][GENERAL OPTIONS] \[input\] \[output\]
+`srcml` \[[general-options\]][GENERAL OPTIONS] \[[srcML-options\]][CREATING SRCML] \[[transformations\]][TRANSFORMATIONS] \[[output-src-options\]][EXTRACTING SOURCE CODE] \[input\] \[output\]
 
 
 ## DESCRIPTION
@@ -30,7 +30,6 @@ file or by not providing an output srcML file.
 
 A source-code language must be specified when input is from standard input.
 
-
 ## GENERAL OPTIONS
 
 `-${HELP_FLAG_SHORT}`, `--${HELP_FLAG_LONG}`
@@ -42,22 +41,17 @@ A source-code language must be specified when input is from standard input.
 `-${VERBOSE_FLAG_SHORT}`, `--${VERBOSE_FLAG_LONG}`
 : Conversion and status information to stderr, including encodings
 used. Especially useful with for monitoring progress of the from file list
-option, a directory, or source-code archive (e.g. tar.gz). The
-signal SIGUSR1 can be used to toggle this option.
+option, a directory, or source-code archive (e.g. tar.gz).
 
 `-${QUIET_FLAG_SHORT}`, `--${QUIET_FLAG_LONG}`
 : Supresses status messages.
 
-`-${INFO_FLAG_SHORT}`, `--${INFO_FLAG_LONG}`
-: Display most metadata, except the unit count (file count) in a srcML
-archive, then exit.
-
-`-${FULL_INFO_FLAG_SHORT}`, `--${FULL_INFO_FLAG_LONG}`
-: Display most metadata including the unit (file) count in a srcML archive,
-then exit.
+`-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
+: Write to output srcML file, URI, or source-code file.
+By default, it writes to standard output.
 
 `-${JOBS_FLAG_SHORT}`, `--${JOBS_FLAG_LONG}=<num>`
-: Allow up to NUM threads for source parsing. Typically depends on number of cores.
+: Allow up to NUM threads for source parsing. Default is 4.
 
 ## CREATING SRCML
 
@@ -67,13 +61,27 @@ If the input is source-code files, then the output is expected to be
 in srcML format. If the input is in srcML format, then the output is
 in source-code format.
 
+`-${TEXT_FLAG_SHORT}`, `--${TEXT_FLAG_LONG}=<text>`
+: Processes the raw <text> string as input, respecting the escaped newline
+charater. Useful for short text inputs. Equivalent to `echo <text> | srcml`
+with the relevant language specification.
+
+`--${FILES_FROM_LONG}=<file>`
+: Treats the input file as a list of source files.
+Each file is separately translated and collectively stored into a
+single srcML archive. The list has a single filename on each line
+starting at the beginning of the line. Blank lines and lines that
+begin with the character '\#' are ignored. As with input and output
+files, using the character '-' in place of a file name takes the input
+list from standard input.
+
 `-${LANGUAGE_FLAG_SHORT}`, `--${LANGUAGE_FLAG_LONG}=<language>`
 : The programming language of the source-code file. Allowable values are
 C, C++, C\#, or Java. The language affects parsing, the allowed
 markup, and what is considered a keyword. The value is also stored
 individually as an attribute in each unit element.
 
-	If not specified, the programming language is based on the file
+If not specified, the programming language is based on the file
 extension. Language must be specified if using standard input. If the
 file extension is not available or not in the standard list, then the
 program will skip that file. This allows you to run `srcml` on a
@@ -96,44 +104,25 @@ in the srcML file. Possible encodings, such as "UTF-16", "ISO-10646-UCS-2",
 or "ISO-8859-1" can be obtained by using the command
 `iconv -l` on UNIX platforms.
 
-`-${TEXT_FLAG_SHORT}`, `--${TEXT_FLAG_LONG}=<text>`
-: Processes the raw <text> string as input, respecting the escaped newline
-charater. Useful for short text inputs. Equivalent to `echo <text> | srcml`
-with the relevant language specification.
-
-`--${FILES_FROM_LONG}=<file>`
-: Treats the input file as a list of source files.
-Each file is separately translated and collectively stored into a
-single srcML archive. The list has a single filename on each line
-starting at the beginning of the line. Blank lines and lines that
-begin with the character '\#' are ignored. As with input and output
-files, using the character '-' in place of a file name takes the input
-list from standard input.
-
 `-${ARCHIVE_FLAG_SHORT}`, `--${ARCHIVE_FLAG_LONG}`
 : Creates a srcML archive, which can contain multiple files in the srcML
-format. Default with when provided more than one file or a directory as
+format. Default when provided more than one file or a directory as
 input.
 
-`-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
-: Write to output srcML file, URI, or source code file.
-By default, it writes to standard output.
-
 `-${OUTPUT_XML_FLAG_SHORT}`,`--${OUTPUT_XML_FLAG_LONG}`
-: Outputs XML in the srcML format. This is complete and valid XML. 
+: Output srcML as complete and valid XML. 
 This is the default when the input is source
 code or files containing source code.
 
 `-${OUTPUT_XML_FRAGMENT_FLAG_SHORT}`,`--${OUTPUT_XML_FRAGMENT_FLAG_LONG}`
-: Outputs XML in the srcML format as an archive fragment. This does not include
+: Output srcML as an archive fragment. This does not include
 the namespaces declared on the archive root element, so is technically not valid XML.
 
 `-${OUTPUT_XML_RAW_FLAG_SHORT}`,`--${OUTPUT_XML_RAW_FLAG_LONG}`
-: Outputs the XML contained in an srcML unit. This is not valid XML as it contains no
+: Output the XML inside of the srcML unit element. This is not valid XML as it contains no
 namespace declarations and does not necessarily have a single root element.
 
-
-### MARKUP OPTIONS
+## MARKUP OPTIONS
 
 Optional line and column attributes are used to indicate the position of
 an element in the original source code document. Both the line and
@@ -142,10 +131,9 @@ a default tab size of 8. Other tab sizes can be set using the
 ${TABS_FLAG}.
 
 `--${POSITION_FLAG_LONG}`
-: Insert line and column attributes into each start element. These
-attributes have a default prefix of
+: Insert attributes for the start (line and column) and end (line and column) of an element in the start tag. These attributes have a default prefix of
 "${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}" in the namespace
-"${SRCML_EXT_POSITION_NS_URI}".
+"${SRCML_EXT_POSITION_NS_URI}", e.g., `<class pos:start="15,1" pos:end="25,2">`
 
 `--${TABS_FLAG}=<tabsize>`
 : Set the tab size. Default is 8. Use of this option automatically
@@ -170,8 +158,7 @@ The default is to markup these regions.
 : Place markup in \#if 0 regions. The default is to only place text
 in these regions, leaving out markup.
 
-
-### XML FORM
+## XML FORMAT
 
 The following options control the format of the XML.
 
@@ -197,18 +184,24 @@ an alternative way to turn on options by declaring the URI for an option.
 `--${XMLNS_FLAG}:<prefix>=<uri>`
 : Sets the namespace prefix PREFIX for the namespace URI.
 There is a set of standard URIs for the elements in srcML, each with a
-predefined prefix. The predefined URIs and prefixes for them include
-(given in xmlns notation):
+predefined prefix. The predefined URIs and prefixes are:
 
-	* ${SRCML_CPP_NS_PREFIX_DEFAULT}=${SRCML_CPP_NS_URI}
-	* ${SRCML_ERR_NS_PREFIX_DEFAULT}=${SRCML_ERR_NS_URI}
-	* ${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}=${SRCML_EXT_POSITION_NS_URI}
+	* `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}=${SRCML_CPP_NS_URI}`
+	* `--${XMLNS_FLAG}:${SRCML_ERR_NS_PREFIX_DEFAULT}=${SRCML_ERR_NS_URI}`
+	* `--${XMLNS_FLAG}:${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}=${SRCML_EXT_POSITION_NS_URI}`
 
+## METADATA OPTIONS
 
-### METADATA OPTIONS
-
-This set of options allows control over various metadata stored in the
+This set of options allows view and control over various metadata stored in the
 srcML document.
+
+`-${INFO_FLAG_SHORT}`, `--${INFO_FLAG_LONG}`
+: Display most metadata, except the unit count (file count) in a srcML
+archive, then exit.
+
+`-${FULL_INFO_FLAG_SHORT}`, `--${FULL_INFO_FLAG_LONG}`
+: Display most metadata including the unit (file) count in a srcML archive,
+then exit.
 
 `-${FILENAME_FLAG_SHORT}`, `--${FILENAME_FLAG_LONG}=<filename>`
 : The value of the filename attribute is typically obtained from the input
@@ -239,7 +232,7 @@ last modified time based on the archive files.
 The following options allow viewing various metadata stored in the
 srcML document.
 
-`-${PREFIX_FLAG_SHORT}`, `--${PREFIX_FLAG_LONG}=<uri>`
+`--${PREFIX_FLAG_LONG}=<uri>`
 : Display a prefix given by a <URI> and exit. See [XML FORM][].
 
 `--${SHOW_FILENAME_FLAG_LONG}`
@@ -286,25 +279,22 @@ srcml input.java --${CPP_FLAG_LONG}
 : Create a srcML unit from input.java, using Java parsing
 rules as well as C++ parsing rules for preprocessor directives.
 
-
-
 ## EXTRACTING SOURCE CODE
 
 The following describe options that are only applicable for when
 the output is desired in source-code format.
 
 `-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
-: Write to output srcML file, URI, or source code file.
+: Write to output srcML file, URI, or source-code file.
 By default, it writes to standard output.
 
 `-${OUTPUT_SRC_FLAG_SHORT}`, `--${OUTPUT_SRC_FLAG_LONG}`
-: Outputs text in source code format. This is the default when the input
-is in srcML format.
+: Output source code. This is the default when the input
+is in srcML.
 
 `--${TO_DIR_FLAG_LONG}=<directory>`
 : Extract all files from srcML and create them in the file system at
 <directory>.
-
 
 ### EXAMPLES
 
@@ -318,26 +308,22 @@ srcml archive.xml --${TO_DIR_FLAG_LONG}=.
 directory as the root directory.
 
 
-
 ## TRANSFORMATIONS
-
-`--${APPLY_ROOT_FLAG_LONG}`
-: Apply an XSLT program or Xpath query to the root element.
-
-`--${RELAXNG_OPTION_LONG}=<file|uri>`
-: Output individual units that match the RELAXNG <file> or <uri>.
 
 `--${XPATH_OPTION_LONG}=<expression>`
 : Apply Xpath <expression> query to each individual unit.
-
-`--${XSLT_LONG}=<file|uri>`
-: Apply a transformation from an XSLT <file> or <uri> to each individual unit.
 
 `--${ATTRIBUTE_LONG}=<arg>`
 : Add attribute <arg> to the Xpath query.
 
 `--${ELEMENT_LONG}=<arg>`
 : Add element <arg> to the Xpath query.
+
+`--${XSLT_LONG}=<file|uri>`
+: Apply a transformation from an XSLT <file> or <uri> to each individual unit.
+
+`--${RELAXNG_OPTION_LONG}=<file|uri>`
+: Output individual units that match the RELAXNG <file> or <uri>.
 
 `-${UNIT_OPTION_SHORT}`, `--${UNIT_OPTION_LONG} <n>`
 : Extract individual <n>th unit from srcML archive.
