--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -95,8 +95,7 @@ set(RELAXNG_OPTION_LONG "relaxng")
 
 #set(LONG_INFO_FLAG_SHORT "L")
 #set(LONG_INFO_FLAG_LONG "longinfo")
-#set(PREFIX_FLAG_SHORT "p")
-#set(PREFIX_FLAG_LONG "prefix")
+set(PREFIX_FLAG_LONG "show-prefix")
 set(LINE_ENDING_FLAG_LONG "output-src-eol")
 set(UPDATE_FLAG_LONG "update")
 set(OUTPUT_FORMAT_FLAG_LONG "output-format")
@@ -110,8 +109,8 @@ set(SRCML_CPP_NS_PREFIX_DEFAULT "cpp")
 set(SRCML_EXT_POSITION_NS_PREFIX_DEFAULT "pos")
 set(SRCML_ERR_NS_URI "http://www.srcML.org/srcML/srcerr")
 set(SRCML_SRC_NS_URI "http://www.srcML.org/srcML/src")
-set(SRCML_CPP_NS_URI "http://www.srcML.org//srcML//cpp")
-set(SRCML_EXT_POSITION_NS_URI "http://www.srcML.org//srcML//position")
+set(SRCML_CPP_NS_URI "http://www.srcML.org/srcML/cpp")
+set(SRCML_EXT_POSITION_NS_URI "http://www.srcML.org/srcML/position")
 set(LITERAL_FLAG "idk")
 set(MAX_THREADS_FLAG_LONG "max-threads")
 set(EXTERNAL_LONG "external")
