Update to man page

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -119,12 +119,11 @@ set(APPLY_ROOT_FLAG_LONG "apply-root")
 set(STATUS_SUCCESS "0")
 set(STATUS_ERROR "1")
 set(STATUS_INVALID_ARGUMENT "2")
-set(STATUS_INPUTFILE_PROBLEM "3")
-set(SRCML_STATUS_INVALID_IO_OPERATION "4")
-set(SRCML_STATUS_IO_ERROR "5")
-set(SRCML_STATUS_UNINITIALIZED_UNIT "6")
-set(SRCML_STATUS_UNSET_LANGUAGE "7")
-set(SRCML_STATUS_NO_TRANSFORMATION "8")
+set(STATUS_INVALID_OPTION "3")
+set(SRCML_STATUS_UNKNOWN_ENCODING "7")
+#set(SRCML_STATUS_IO_ERROR "5")
+set(SRCML_STATUS_INVALID_LANGUAGE "6")
+#set(SRCML_STATUS_NO_TRANSFORMATION "8")
 set(PRETTY_FLAG_LONG "pretty")
 
 # Custom commands for creating things using the ronn executable.
