--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -179,7 +179,9 @@ extension namespace. These flags make it easier to declare, and are
 an alternative way to turn on options by declaring the URI for an option.
 
 `--${XMLNS_FLAG}=<uri>`
-: Sets the URI for the default namespace.
+: Sets the <uri> for the default namespace. The predefined URI is:
+
+	* `--${XMLNS_FLAG}=${SRCML_SRC_NS_URI}`
 
 `--${XMLNS_FLAG}:<prefix>=<uri>`
 : Sets the namespace prefix PREFIX for the namespace URI.
@@ -192,16 +194,7 @@ predefined prefix. The predefined URIs and prefixes are:
 
 ## METADATA OPTIONS
 
-This set of options allows view and control over various metadata stored in the
-srcML document.
-
-`-${INFO_FLAG_SHORT}`, `--${INFO_FLAG_LONG}`
-: Display most metadata, except the unit count (file count) in a srcML
-archive, then exit.
-
-`-${FULL_INFO_FLAG_SHORT}`, `--${FULL_INFO_FLAG_LONG}`
-: Display most metadata including the unit (file) count in a srcML archive,
-then exit.
+This set of options allows view and control over various metadata in srcML.
 
 `-${FILENAME_FLAG_SHORT}`, `--${FILENAME_FLAG_LONG}=<filename>`
 : The value of the filename attribute is typically obtained from the input
@@ -231,6 +224,14 @@ last modified time based on the archive files.
 
 The following options allow viewing various metadata stored in the
 srcML document.
+
+`-${INFO_FLAG_SHORT}`, `--${INFO_FLAG_LONG}`
+: Display most metadata, except the unit count (file count) in a srcML
+archive, then exit.
+
+`-${FULL_INFO_FLAG_SHORT}`, `--${FULL_INFO_FLAG_LONG}`
+: Display most metadata including the unit (file) count in a srcML archive,
+then exit.
 
 `--${PREFIX_FLAG_LONG}=<uri>`
 : Display a prefix given by a <URI> and exit. See [XML FORM][].
@@ -282,7 +283,10 @@ rules as well as C++ parsing rules for preprocessor directives.
 ## EXTRACTING SOURCE CODE
 
 The following describe options that are only applicable for when
-the output is desired in source-code format.
+the output is in source-code format.
+
+`-${UNIT_OPTION_SHORT}`, `--${UNIT_OPTION_LONG} <n>`
+: Extract individual <n>th unit from srcML archive.
 
 `-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
 : Write to output srcML file, URI, or source-code file.
@@ -307,26 +311,27 @@ srcml archive.xml --${TO_DIR_FLAG_LONG}=.
 : Re-create all files based on the srcML units in archive.xml, using the current
 directory as the root directory.
 
-
 ## TRANSFORMATIONS
 
 `--${XPATH_OPTION_LONG}=<expression>`
 : Apply Xpath <expression> query to each individual unit.
 
-`--${ATTRIBUTE_LONG}=<arg>`
-: Add attribute <arg> to the Xpath query.
+By default, the result is a srcML archive where each unit is a query result, marked with the original filename. In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc.
 
-`--${ELEMENT_LONG}=<arg>`
-: Add element <arg> to the Xpath query.
+As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and uri used for the namespace
+must be declared with the `--xmlns` option.
+
+`--${ATTRIBUTE_LONG} <prefix>:<name>=<value>`
+: Adds the attribute <prefix>:<name>="<value>" to every Xpath expression result.
+
+`--${ELEMENT_LONG}=<prefix>:<name>`
+: Wraps every Xpath expression result with an element of the form <prefix>:<name>
 
 `--${XSLT_LONG}=<file|uri>`
 : Apply a transformation from an XSLT <file> or <uri> to each individual unit.
 
 `--${RELAXNG_OPTION_LONG}=<file|uri>`
 : Output individual units that match the RELAXNG <file> or <uri>.
-
-`-${UNIT_OPTION_SHORT}`, `--${UNIT_OPTION_LONG} <n>`
-: Extract individual <n>th unit from srcML archive.
 
 
 ### EXAMPLES
@@ -342,16 +347,11 @@ of each unit in the archive to standard out.
 ## RETURN STATUS
 
 * ${STATUS_SUCCESS}: Normal
-* ${STATUS_ERROR}: Error
-* ${STATUS_INVALID_ARGUMENT}: Invalid argument
-* ${STATUS_INPUTFILE_PROBLEM}: Invalid input
-* ${SRCML_STATUS_INVALID_IO_OPERATION}: Invalid read I/O operation (such as write on read only archive)
-* ${SRCML_STATUS_IO_ERROR}: Error with input
-* ${SRCML_STATUS_UNINITIALIZED_UNIT}: Uninitialized unit
-* ${SRCML_STATUS_UNSET_LANGUAGE}: Unset language
-* ${SRCML_STATUS_NO_TRANSFORMATION}: There are no transformations
-
-
+* ${STATUS_ERROR}: General error
+* ${STATUS_INVALID_ARGUMENT}: Invalid option argument
+* ${STATUS_INVALID_OPTION}: Invalid option
+* ${SRCML_STATUS_UNKNOWN_ENCODING}: Unknown encoding
+* ${SRCML_STATUS_INVALID_LANGUAGE}: Invalid language
 
 ## CAVEATS
 
@@ -371,22 +371,17 @@ before the XML declaration may not be processed correctly by `srcml`
 and by other libxml2-based tools (e.g., xmllint). Use the LE or BE
 version of the encoding, e.g., UTF-32BE, UTF-32LE, instead.
 
-Report bugs to collard@uakron.edu
-
-
+Report bugs at Contact us at http://www.srcml.org/support.html
 
 ## SEE ALSO
 
 `srcml`(1)
 
 
-
 ## AUTHORS
 
-Written by Michael L. Collard, Michael Decker, Brian Bartman, Drew Guarnera,
+Written by Michael L. Collard, Michael Decker, Drew Guarnera, Brian Bartman, 
 and Heather Michaud.
-
-
 
 ## COPYRIGHT
 
