--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -181,16 +181,15 @@ an alternative way to turn on options by declaring the URI for an option.
 `--${XMLNS_FLAG}=<uri>`
 : Sets the <uri> for the default namespace. The predefined URI is:
 
-	* `--${XMLNS_FLAG}=${SRCML_SRC_NS_URI}`
+	`--${XMLNS_FLAG}=${SRCML_SRC_NS_URI}`
 
 `--${XMLNS_FLAG}:<prefix>=<uri>`
 : Sets the namespace prefix PREFIX for the namespace URI.
 There is a set of standard URIs for the elements in srcML, each with a
 predefined prefix. The predefined URIs and prefixes are:
 
-	* `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}=${SRCML_CPP_NS_URI}`
-	* `--${XMLNS_FLAG}:${SRCML_ERR_NS_PREFIX_DEFAULT}=${SRCML_ERR_NS_URI}`
-	* `--${XMLNS_FLAG}:${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}=${SRCML_EXT_POSITION_NS_URI}`
+	`--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}=${SRCML_CPP_NS_URI}`  
+	`--${XMLNS_FLAG}:${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}=${SRCML_EXT_POSITION_NS_URI}`
 
 ## METADATA OPTIONS
 
@@ -316,7 +315,7 @@ directory as the root directory.
 `--${XPATH_OPTION_LONG}=<expression>`
 : Apply Xpath <expression> query to each individual unit.
 
-By default, the result is a srcML archive where each unit is a query result, marked with the original filename. In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc.
+In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc. By default, the result is a srcML archive where each unit is a query result, marked with the original filename.
 
 As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and uri used for the namespace
 must be declared with the `--xmlns` option.
@@ -329,6 +328,9 @@ must be declared with the `--xmlns` option.
 
 `--${XSLT_LONG}=<file|uri>`
 : Apply a transformation from an XSLT <file> or <uri> to each individual unit.
+
+`--${XSLT_PARAM} <name>="<value>"`
+: Passes the string parameter <name> with UTF-8 encoded string <value> to the XSLT program
 
 `--${RELAXNG_OPTION_LONG}=<file|uri>`
 : Output individual units that match the RELAXNG <file> or <uri>.
